app/static/style.css
/* Global Styles */

body {
    font-family: 'Helvetica Neue', Arial, sans-serif; /* Use a sans-serif font */
    background: linear-gradient(-45deg, #6b9ac4, #8dc6f4, #6b9ac4, #8dc6f4);
    overflow-x: hidden; /* Prevent horizontal scrollbar if content overflows */
    min-height: 100vh; /* min height of 100% of the viewport height */
    color: #333; /* color of the text */
    display: flex; /* Use flexbox for layout */
    flex-direction: column; /* Stack flex items vertically */
    background-size: 400% 400%;
    animation: gradientBG 300s ease infinite;
    scrollbar-width: thin;
    scrollbar-color: rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.1);
}

.flash-container {
    position: fixed;
    top: 79px; /* Adjust this value based on the height of your navbar */
    left: 0;
    right: 0;
    z-index: 99; /* Ensure flash message appears above other content but below navbar */
    margin: 0 auto;
    width: 100%;
    text-align: center;
}

.alert {
    display: inline-block;
    margin: 0 auto;
    z-index: 99;
}

@keyframes gradientBG {
    0% {
        background-position: 0% 50%;
    }
    50% {
        background-position: 100% 50%;
    }
    100% {
        background-position: 0% 50%;
    }
}

/* Navbar Styles */
.navbar {
    position: fixed; /* Stick the navbar to the top */
    background: rgba(255, 255, 255, 0.7); /* Fallback for devices that don't support backdrop-filter */
    background: linear-gradient(
        to bottom,
        rgba(255, 255, 255, 0.7),
        rgba(255, 255, 255, 0.5)
    );
    -webkit-backdrop-filter: blur(5px);
    backdrop-filter: blur(5px);
    border-bottom: none;
    box-shadow: none;
    position: fixed; /* Stick the navbar to the top */
    top: 0;
    left: 0;
    right: 0;
    z-index: 100; /* Ensure navbar is above other content */ 
    box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* Subtle shadow for depth */
}

.navbar-light .navbar-nav .nav-link {
    color: #fcfcfc;
}

.navbar-light .navbar-nav .nav-link:hover,
.navbar-light .navbar-nav .nav-link:focus {
    color: #233d57; /* Darken on hover/focus for better interaction feedback */
}

.nav-item .active {
    color: #2b4a69 !important; /* Darken on hover/focus for better interaction feedback */
}

.dropdown-item {
    color: #fcfcfc;
}

.dropdown-item:hover, .dropdown-item:focus {
    color: #233d57;
}

#username, .choose_name {
    color: #fcfcfc;
    font-size: larger;
}

.vote_name {
    color: #2b4a69;
    font-size: xx-large;
    display: flex;
    justify-content: center;
    align-items: center;

}

.vote_phrase {
    color: #fcfcfc;
    font-size: x-large;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* Webkit browsers (Chrome, Safari, newer versions of Edge) */
::-webkit-scrollbar {
    width: 15px;
    background-color: transparent;
}

::-webkit-scrollbar-track {
    background-color: rgba(200, 200, 200, 0.2);
    border-radius: 10px;
    border: 1px solid rgba(255, 255, 255, 0.3);
    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
}

::-webkit-scrollbar-thumb {
    background-color: rgba(255, 255, 255, 0.7);
    border-radius: 10px;
    border: 3px solid rgba(200, 200, 200, 0.2);
    background-clip: padding-box;
    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.5);
}

::-webkit-scrollbar-thumb:hover {
    background-color: rgba(255, 255, 255, 0.9);
}

main {
    flex: 1; /* Allow main content to grow and take up available space */
    padding-top: 120px;
}


h1 {
    font-size: 3rem;
    font-weight: 700;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
    margin-top: 2rem;
    margin-bottom: 0.5rem;
}

h2 {
    font-size: 1.5rem;
    font-weight: 400;
    color: #34495e;
    margin-bottom: 2rem;
}

h1, #datetime {
    margin-top: 20px;
    color: #233d57;
}

#datetime {
    margin-top: 20px; /* Horizontal margin */
}

#feedback ul {
    list-style-type: none;
}

#clear_feedback_button {
    margin: 0 auto; /* Center the button horizontally */
}

#datetime {
    display: inline;
}

.glass {
    background: rgba(255, 255, 255, 0.7);
    background: linear-gradient(
        to bottom right,
        rgba(255, 255, 255, 0.7),
        rgba(255, 255, 255, 0.3)
    );
    -webkit-backdrop-filter: blur(10px);
    backdrop-filter: blur(10px);
    border-radius: 20px;
    border: 1px solid rgba(255, 255, 255, 0.3);
    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
}

.glass_menu {
    background: rgba(255, 255, 255, 0.2);
    backdrop-filter: blur(8px);
    border-radius: 8px;
    border: 1px solid rgba(255, 255, 255, 0.3);
    box-shadow: 0 4px 16px 0 rgba(31, 38, 135, 0.37);
}

select {
    background-color: rgba(255, 255, 255, 0.2) !important;
}

select option {
    color: #2b4a69;
}

/* Custom button style */
.phrasecraze-btn {
    background: rgba(255, 255, 255, 0.2);
    border: 1px solid rgba(255, 255, 255, 0.3);
    color: #fcfcfc;
    transition: all 0.3s ease;
    padding: 10px 20px;
    border-radius: 5px;
    font-size: 16px;
}

.phrasecraze-btn:hover, .phrasecraze-btn:focus {
    background: rgba(255, 255, 255, 0.3);
    color: #2b4a69;
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
}

/* Primary action button */
.phrasecraze-btn-primary {
    background: rgba(0, 123, 255, 0.6);
    border-color: rgba(0, 123, 255, 0.8);
}

.phrasecraze-btn-primary:hover, .phrasecraze-btn-primary:focus {
    background: rgba(0, 123, 255, 0.8);
    color: #ffffff;
}

/* Outline Primary button */
.phrasecraze-btn-outline-primary {
    background: rgba(255, 255, 255, 0.1);
    border: 2px solid rgba(0, 123, 255, 0.8);
    color: rgba(0, 123, 255, 0.9);
}

.phrasecraze-btn-outline-primary:hover, .phrasecraze-btn-outline-primary:focus {
    background: rgba(0, 123, 255, 0.2);
    border-color: rgba(0, 123, 255, 1);
    color: #ffffff;
    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
}

/* Secondary action button */
.phrasecraze-btn-secondary {
    background: rgba(108, 117, 125, 0.6);
    border-color: rgba(108, 117, 125, 0.8);
}
/* ... */

